# BitsAndBobsInC

./: CMakeLists.txt  create_subproj.py
AgentBasedSystemBasic/: CMakeLists.txt
AgentBasedSystemBasic/source/: Agent.cpp  Agent.h  AgentBasedSystemBasic.cpp  Component.cpp  Component.h  Grid2D.cpp  Grid2D.h  IDGen.cpp  IDGen.h  Patch.cpp  Patch.h  Position.cpp  Position.h
AllElementsOfAVectorEqual/: CMakeLists.txt
AllElementsOfAVectorEqual/source/: AllElementsOfAVectorEqual.cpp
CircumventingCircularDependencies/: CMakeLists.txt
CircumventingCircularDependencies/source/: CircumventingCircularDependencies.cpp  PolymorphismWithMemberVariables.cpp
ConfigureFileInCmake/: CMakeLists.txt  header.h.in.h
ConstructorInheritance/: CMakeLists.txt
ConstructorInheritance/source/: ConstructorInheritance.cpp
ConversionOperators/: CMakeLists.txt
ConversionOperators/source/: ConversionOperators.cpp
CopyAnInt/: CMakeLists.txt
CopyAnInt/source/: CopyAnInt.cpp
CopyConstructor/: CMakeLists.txt
CopyConstructor/source/: CopyConstructor.cpp
CopyInitialisation/: CMakeLists.txt
CopyInitialisation/source/: CopyInitialisation.cpp
Counter/: CMakeLists.txt
Counter/source/: Counter.cpp
Enumerations/: CMakeLists.txt
Enumerations/source/: Enumerations.cpp
ErrorHandling/: CMakeLists.txt
ExceptionHandling/: CMakeLists.txt
ExceptionHandling/source/: ExceptionHandling.cpp
ExplicitConstructors/: CMakeLists.txt
ExplicitConstructors/source/: ExplicitConstructors.cpp
InstantiatingFromPointerInConstructor/: CMakeLists.txt
InstantiatingFromPointerInConstructor/source/: InstantiatingFromPointerInConstructor.cpp
LinkingInLinux/: CMakeLists.txt
LinkingInLinux/source/: LinkingInLinux.cpp
MallocFunctionInC/: CMakeLists.txt
MallocFunctionInC/source/: MallocFunctionInC.c
Namespaces/: CMakeLists.txt
Namespaces/source/: Namespaces.cpp
PolymorphicBasePointers/: CMakeLists.txt
PolymorphicBasePointers/source/: PolymorphicBasePointers.cpp
PolymorphismWithRegularPointers/: CMakeLists.txt
PolymorphismWithRegularPointers/source/: PolymorphismWithRegularPointers.cpp
PolymorphismWithSmartPointers/: CMakeLists.txt
PolymorphismWithSmartPointers/source/: PolymorphismWithSmartPointers.cpp
PutToOperatorOverloading/: CMakeLists.txt
ReferencesAvoidCopyingLargeData/: CMakeLists.txt
ReferencesAvoidCopyingLargeData/source/: ReferencesAvoidCopyingLargeData.cpp
ReferencesInForEachLoops/: CMakeLists.txt
ReferencesInForEachLoops/source/: ReferencesInForEachLoops.cpp
ReferencesUpdatingThemselves/: CMakeLists.txt
ReferencesUpdatingThemselves/source/: ReferencesUpdatingThemselves.cpp
ReferencesVsPointers/: CMakeLists.txt
ReferencesVsPointers/source/: ReferencesVsPointers.cpp
ReferencesinCpp/: CMakeLists.txt
ReferencesinCpp/source/: ReferencesinCpp.cpp
ReferencesinFunction/: CMakeLists.txt
ReferencesinFunction/source/: ReferencesinFunction.cpp
ReturnTypePolymorphism/: CMakeLists.txt
ReturnTypePolymorphism/source/: ReturnTypePolymorphism.cpp
ScoreResolutionOperator/: CMakeLists.txt
SharedPtr/: CMakeLists.txt
SharedPtr/source/: SharedPtr.cpp
SlicableVector/: CMakeLists.txt
SlicableVector/source/: SlicableVector.cpp
StaticDataMembers/: CMakeLists.txt
StaticDataMembers/source/: StaticDataMembers.cpp
Templates/: CMakeLists.txt
Templates/source/: Templates.cpp
UninstantiatedClassAsVariable/: CMakeLists.txt
UninstantiatedClassAsVariable/source/: UninstantiatedClassAsVariable.cpp
UseOfUniquePtr/: CMakeLists.txt
UseOfUniquePtr/source/: UseOfUniquePtr.cpp
VectorClass/: CMakeLists.txt
VectorClass/source/: VectorClass.cpp
VehicleFactory/: CMakeLists.txt  uml.puml
VehicleFactory/source/: VehicleFactory.cpp
